# book_recommender

./: .gitignore  Makefile  README.md  docker-compose.yml
backend/: .dockerignore  .gitignore  Dockerfile  pyproject.toml
backend/src/: main.py  settings.py
backend/src/api/: api.py  dependencies.py  errors.py  middleware.py
backend/src/api/endpoints/: books.py  ratings.py  recommendation.py  users.py
backend/src/api/schemas/: base.py  books.py  http_exceptions.py  ratings.py  recommendation.py
backend/src/collections/: __init__.py  books.py  ratings.py
backend/src/core/: __init__.py  books_index.py  manager.py  model.py  recommender.py
backend/src/models/: __init__.py  base.py  books.py
backend/src/scripts/: initialize_database.py
frontend/: Dockerfile  package.json
frontend/src/: App.tsx  types.ts
frontend/src/api/: BooksApi.ts  RatingsApi.ts  RecommendationApi.ts
frontend/src/components/: ActionIcons.tsx  BookCard.tsx  BookProfile.tsx  BooksCatalogue.tsx  BooksGrid.tsx  BooksSearchBar.tsx  ErrorPage.tsx  Root.tsx  UserPage.tsx
