[tool.poetry]
name = "src"
description = "Book Recommender"
version = "0.0.1"
authors = ["vargaon <varga.ondra@seznam.cz>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
python-dotenv = "^1.0.0"
wheel = "^0.41.3"
uvicorn = "^0.24.0"
gunicorn = "^21.2.0"
fastapi = "^0.104.1"
pydantic = "^2.4.2"
pydantic-settings = "^2.0.3"
pymongo = "^4.6.0"
chromadb = "^0.4.15"
pandas = "^2.1.1"
beautifulsoup4 = "^4.11.1"
sentence_transformers = "^2.2.2"
passlib = { version = "^1.7", extras = ["bcrypt"] }
python-jose = { version = "^3.3.0", extras = ["cryptography"] }
python-multipart = "^0.0.5"
loguru = "^0.6.0"
Sphinx = "^6.2.1"
sphinx-rtd-theme = "^1.2.2"
autodoc-pydantic = "^2.0.1"
sphinx-click = "^4.4.0"
cryptography = "^38.0.4"
tqdm = "^4.66.1"

[tool.poetry.dev-dependencies]
pandas = "^2.1.1"
pytest = "^7.4.2"
black = "^23.9.1"
isort = "^5.12.0"
mypy = "^1.5.1"
ipykernel = "^6.16.0"
ipywidgets = "^8.0.2"

[tool.poetry.scripts]
init-db = "src.scripts.initialize_database:main"

[tool.black]
line-length = 99

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
